# legends-companion

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  PATCH_NOTES.md  PLAN.md  README.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.2.1.md  RELEASE_NOTES_0.2.2.md  RELEASE_NOTES_0.2.3.md  RELEASE_NOTES_0.2.4.md  RELEASE_NOTES_0.2.5.md  TRIGGERS_PLAN.md  rustfmt.toml
.beads/: issues.jsonl  metadata.json
.github/ISSUE_TEMPLATE/: bug.yml  idea.yml  missing-trigger.yml
.github/workflows/: ci.yml  release.yml
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/src/: api.ts  globals.d.ts  hooks.ts  main.tsx  mock.ts  mockPacks.ts  overlayState.test.ts  overlayState.ts  resolution.test.ts  resolution.ts  styles.css  theme.ts  timerTraining.test.ts  timerTraining.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: gen_icons.py
app/src-tauri/src/: audio.rs  career.rs  commands.rs  config.rs  data_root.rs  datapack.rs  discover.rs  dropdb.rs  inventory.rs  lib.rs  library.rs  logging.rs  main.rs  meters.rs  refdb.rs  sounds.rs  spell_icons.rs  spelldb.rs  store.rs  tailing.rs  timer_training.rs  update.rs  watches.rs
app/src/components/: CareerPanels.tsx  CoachTab.tsx  Dashboard.tsx  DiagnosticsTab.tsx  DingDigest.tsx  DropsTab.tsx  Empty.tsx  FeedbackModal.tsx  FightsTab.tsx  GlobalSearchModal.tsx  Icons.tsx  InventoryTab.tsx  ItemIcons.tsx  LiveTab.tsx  MacrosTab.tsx  MeterTable.tsx  MetersTab.tsx  MobsTab.tsx  Modal.tsx  PaceRates.tsx  Pager.tsx  PatchNotesTab.tsx  QuestsTab.tsx  QuickTriggerModal.tsx  RecipesTab.tsx  RefFilters.tsx  ResourceLinks.test.ts  ResourceLinks.tsx  SearchSelect.tsx  SessionPanels.tsx  SettingsTab.tsx  ShareDialogs.tsx  SpellGemIcon.test.ts  SpellGemIcon.tsx  SpellsTab.tsx  TimerBars.test.ts  TimerBars.tsx  TimersTab.tsx  Toast.tsx  TriggerEditor.test.ts  (+4 more)
app/src/data/: commands.json  macros.json  macros.test.ts  quests.LICENSE.md  quests.json  spell_names.json
app/src/lib/: buffConflicts.test.ts  buffConflicts.ts  career.test.ts  career.ts  classes.ts  deathRecap.test.ts  deathRecap.ts  deepLinks.ts  effects.test.ts  effects.ts  factionLedger.test.ts  factionLedger.ts  feedback.test.ts  feedback.ts  format.ts  globalSearch.test.ts  globalSearch.ts  highlights.test.ts  highlights.ts  impactSizing.ts  inventory.test.ts  inventory.ts  inventoryFilters.test.ts  inventoryFilters.ts  inventoryStore.ts  itemReference.ts  localStore.ts  meterRows.test.ts  meterRows.ts  mezBreaks.test.ts  mezBreaks.ts  overlayRegistry.test.ts  overlayRegistry.ts  overlaySamples.ts  pace.test.ts  pace.ts  packLint.test.ts  packLint.ts  parseText.ts  patternJs.ts  (+32 more)
app/src/overlay/: ImpactPresentation.tsx  OverlayAlerts.tsx  OverlayBuffs.tsx  OverlayConditions.tsx  OverlayEditChrome.tsx  OverlayHighlights.tsx  OverlayImpact.test.ts  OverlayImpact.tsx  OverlayMeter.tsx  OverlayOnOthers.tsx  (+11 more)
assets/data/: DATA_SOURCES.md
assets/sounds/: manifest.json
crates/eqlog-cli/: Cargo.toml
crates/eqlog-cli/src/: cmd_career.rs  cmd_casts.rs  cmd_detect.rs  cmd_fights.rs  cmd_parse.rs  cmd_share.rs  cmd_tail.rs  cmd_triggers.rs  main.rs  triggerlib.rs  util.rs
crates/eqlog-core/: Cargo.toml
crates/eqlog-store/: Cargo.toml
crates/eqlog-store/src/: career.rs  import.rs  inventory.rs  lib.rs  schema.rs
crates/eqlog-store/tests/: career_tests.rs
crates/eqlog-triggers/: Cargo.toml
crates/eqlog-triggers/src/: buff_lands.rs  classdetect.rs  engine.rs  gina.rs  lib.rs  model.rs  packs.rs  profile.rs  share.rs  storage.rs
crates/eqlog-triggers/tests/: engine_tests.rs  gina_tests.rs  share_tests.rs  storage_tests.rs  v2_tests.rs
docs/: APP_REVIEW.md  architecture-0.2.md  career-db-design.md  now-sprint.md  overlay-lanes-spec.md  overlay-modules.md  release-1.0-checklist.md  research-triggers.md  storage-layout.md  timers-design.md  trigger-editor-review-2.md  trigger-editor-spec.md  ux-findings.md  webhook-actions.md  zone-scoped-triggers.md
fixtures/: sample_session.txt  unique_patterns.txt
tools/dropdata/: build_drops_db.py
tools/questdata/: README.md  audit_quest_sources.py  build_quest_catalog.py  sky_item_sources.json  test_audit_quest_sources.py  test_build_quest_catalog.py
tools/release/: make_data_pack.py
tools/sounds/: README.md  generate_sounds.py
tools/spelldata/: README.md  build_spell_db.py  check_packs.py  extract_spells.py  generate_buff_lands.py  generate_packs.py
triggers/: default.json
triggers/curated/: bard.json  beastlord.json  berserker.json  cleric.json  druid.json  enchanter.json  event-sources.json  impact.json  magician.json  monk.json  necromancer.json  paladin.json  ranger.json  rogue.json  shadowknight.json  shaman.json  skills.json  universal.json  warrior.json  wizard.json
(+10 files in other folders)
