[package]
name = "eqlogs-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Legends Companion — EverQuest Legends log companion (dashboard + overlays)"

# Keep this crate OUT of the repo's root cargo workspace: it only builds where
# a webview toolchain exists (windows-latest CI / a Windows dev box).
[workspace]

[lib]
name = "eqlogs_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eqlog-core = { path = "../../crates/eqlog-core" }
eqlog-triggers = { path = "../../crates/eqlog-triggers" }
eqlog-store = { path = "../../crates/eqlog-store" }

[target.'cfg(windows)'.dependencies]
tts = "0.26"
rodio = "0.19"
