[package]
name = "eqlogs-app"
version = "0.2.11"
edition = "2021"
license = "MIT"
description = "Legends Companion — EverQuest Legends log companion (dashboard + overlays)"

# Keep this crate OUT of the repo's root cargo workspace: it only builds where
# a webview toolchain exists (windows-latest CI / a Windows dev box).
[workspace]

[lib]
name = "eqlogs_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
# Global silence hotkey (Ctrl+Alt+S): must fire while the game holds focus,
# so an in-app keydown listener is not enough.
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eqlog-core = { path = "../../crates/eqlog-core" }
eqlog-triggers = { path = "../../crates/eqlog-triggers" }
eqlog-store = { path = "../../crates/eqlog-store" }
# This crate is outside the root cargo workspace (see [workspace] above),
# so no `workspace = true` inheritance - keep the spec in sync with root.
rusqlite = { version = "0.32", features = ["bundled"] }
# Data-update channel (datapack.rs): blocking HTTP (default `tls` feature is
# rustls — no native TLS toolchain needed), sha256 verification, and the
# triggers.zip extraction. `zip` must stay in sync with the root workspace.
ureq = "2"
sha2 = "0.10"
zip = "2"

[target.'cfg(windows)'.dependencies]
tts = "0.26"
rodio = "0.19"
